--- a/pom.xml
+++ b/pom.xml
@@ -88,10 +88,6 @@
 			<url>http://repo.aikar.co/nexus/content/groups/aikar/</url>
 		</repository>
 		<repository>
-	        <id>sk89q-repo</id>
-	        <url>http://maven.sk89q.com/repo/</url>
-	    </repository>
-		<repository>
 			<id>citizens-repo</id>
 			<url>https://repo.citizensnpcs.co</url>
 		</repository>
@@ -110,6 +106,14 @@
 		<repository>
 			<id>mypet-repo</id>
 			<url>http://repo.keyle.de/</url>
+		</repository>
+		<repository>
+			<id>mojang</id>
+			<url>https://libraries.minecraft.net/</url>
+		</repository>
+		<repository>
+			<id>shopkeepers</id>
+			<url>https://nexus.lichtspiele.org/repository/releases/</url>
 		</repository>
 	</repositories>
 	<pluginRepositories>
@@ -156,6 +160,11 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
+			<groupId>com.nisovin.shopkeepers</groupId>
+			<artifactId>Shopkeepers</artifactId>
+			<version>2.12.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.mcmonkey</groupId>
 			<artifactId>sentinel</artifactId>
 			<version>2.2.0-SNAPSHOT</version>
@@ -195,7 +204,19 @@
 		    <artifactId>spigot-api</artifactId>
 		    <version>1.16.2-R0.1-SNAPSHOT</version>
 		    <scope>provided</scope>
-		</dependency> 
+		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.16.5-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.13-R0.1-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 
 		<!-- Spigot NMS versions -->
 		<dependency>
