--- a/pom.xml
+++ b/pom.xml
@@ -154,8 +154,7 @@
 			<groupId>com.zaxxer</groupId>
 			<artifactId>HikariCP</artifactId>
 			<version>4.0.1</version>
-			<scope>provided</scope>
-            <optional>true</optional>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.lumine.xikage</groupId>
