--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,22 @@
 	    		</includes>
 	    	</resource>
 	    </resources>
-	    <plugins> 
+	    <plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<sourcepath>${project.build.directory}/delombok</sourcepath>
+				</configuration>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 	      	<plugin>
 	        	<artifactId>maven-compiler-plugin</artifactId>
 	        	<version>3.1</version>
@@ -69,8 +84,22 @@
                 </executions>
             </plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.2.0</version>
+					<configuration>
+						<failOnWarnings>true</failOnWarnings>
+						<show>public</show>
+						<quiet>true</quiet>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
-	<repositories> 
+	<repositories>
 		<repository>
             <id>lumine-repo</id>
             <url>https://mvn.lumine.io/repository/maven-public/</url>
@@ -187,7 +216,7 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 			<scope>provided</scope>
-		</dependency> 
+		</dependency>
 		
 		<!-- Metrics -->
         <dependency>
