--- a/pom.xml
+++ b/pom.xml
@@ -100,7 +100,7 @@
         </repository>
 		<repository>
 			<id>everything</id>
-			<url>http://repo.citizensnpcs.co/</url>
+			<url>https://repo.citizensnpcs.co/</url>
 		</repository>
 		<repository> 
             <id>spigot-repo</id>
@@ -108,7 +108,7 @@
         </repository>
 		<repository>
 			<id>aikar</id>
-			<url>http://repo.aikar.co/nexus/content/groups/aikar/</url>
+			<url>https://repo.aikar.co/nexus/content/groups/aikar/</url>
 		</repository>
 		<repository>
 			<id>citizens-repo</id>
@@ -128,7 +128,7 @@
 		</repository>
 		<repository>
 			<id>mypet-repo</id>
-			<url>http://repo.keyle.de/</url>
+			<url>https://repo.keyle.de/</url>
 		</repository>
 		<repository>
 			<id>mojang</id>
@@ -144,10 +144,10 @@
 			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
 		</repository>
 	</repositories>
-	<pluginRepositories>
+	<pluginRepositories> 
 	    <pluginRepository>
 	        <id>apache.snapshots</id>
-	        <url>http://repository.apache.org/snapshots/</url>
+	        <url>https://repository.apache.org/snapshots/</url>
 	    </pluginRepository>
 	</pluginRepositories>
 	<dependencies>
@@ -209,13 +209,14 @@
 			<version>3.6</version>
 			<scope>provided</scope>
 		</dependency>
+		<!-- 
 		<dependency>
 			<groupId>de.keyle</groupId>
 			<artifactId>mypet</artifactId>
 			<version>3.11-20210228.184522-32</version>
 			<scope>provided</scope>
 			<optional>true</optional>
-		</dependency>
+		</dependency> -->
 		
 		<!-- Metrics -->
         <dependency>
