--- a/pom.xml
+++ b/pom.xml
@@ -209,14 +209,14 @@
 			<version>3.6</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- 
+
 		<dependency>
 			<groupId>de.keyle</groupId>
 			<artifactId>mypet</artifactId>
 			<version>3.11-20210228.184522-32</version>
 			<scope>provided</scope>
 			<optional>true</optional>
-		</dependency> -->
+		</dependency>
 		
 		<!-- Metrics -->
         <dependency>
