--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
     	<dependency>
             <groupId>io.lumine</groupId>
             <artifactId>LumineUtils</artifactId>
-            <version>1.16.1-SNAPSHOT</version>
+			<version>1.16.1-20210326.031037-28</version>
             <scope>compile</scope> 
             <exclusions>
 		        <exclusion>
