--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
 					<source>8</source>
 					<target>8</target>
@@ -172,7 +173,7 @@
     	<dependency>
             <groupId>io.lumine</groupId>
             <artifactId>LumineUtils</artifactId>
-			<version>1.16.1-20210326.031037-28</version>
+			<version>1.16.1-SNAPSHOT</version>
             <scope>compile</scope> 
             <exclusions>
 		        <exclusion>
