--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.4</version>
+				<version>3.3.0-SNAPSHOT</version>
 				<executions>
 					<execution>
 						<phase>package</phase>
@@ -137,10 +137,6 @@
 			<url>https://clojars.org/repo/</url>
 		</repository>
 
-		<repository>
-			<id>mypet-repo</id>
-			<url>https://repo.keyle.de/</url>
-		</repository>
 
 		<repository>
 			<id>mojang</id>
@@ -233,14 +229,6 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.6</version>
 			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>de.keyle</groupId>
-			<artifactId>mypet</artifactId>
-			<version>3.11-20210228.184522-32</version>
-			<scope>provided</scope>
-			<optional>true</optional>
 		</dependency>
 		
 		<!-- Metrics -->
