--- a/main/src/resources/config.yml
+++ b/main/src/resources/config.yml
@@ -36,9 +36,12 @@ defense-application: '#damage# * (1 - (#defense# / (#defense# + 100)))'
 # Allows to scale health up/down to a specific
 # amount so extra health does not fill up the screen.
 # Requires a SERVER reload when changed.
+# Delay should be used if your Users experience issues revolving around seeing too many hearts still. This can occur with plugins such as MySQL Inventory Bridge
+# The delay is in ticks. 20 ticks = 1 second
 health-scale:
   enabled: true
   scale: 20
+  delay: 0
 
 # Default and max. values of armor stats. These systems
 # all have a cooldown which can be reduced using the
