--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
 					<execution>
 						<id>attach-javadocs</id>
 						<goals>
-							<goal>jar</goal>
+							<goal>jar</goal>s
 						</goals>
 					</execution>
 				</executions>
