--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,8 @@
 	<repositories>
 
 		<repository>
-            <id>lumine-repo</id>
-            <url>https://mvn.lumine.io/repository/maven-public/</url>
+            <id>lumine</id>
+            <url>https://mvn.lumine.io/repository/maven/</url>
         </repository>
 
 		<repository>
