--- a/pom.xml
+++ b/pom.xml
@@ -316,31 +316,7 @@
             <artifactId>holographicdisplays-api</artifactId>
             <version>2.4.9-SNAPSHOT</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
-
-        <dependency>
-            <groupId>unknown</groupId>
-            <artifactId>holograms</artifactId>
-            <version>unknown</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/Holograms-2.13.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>unknown</groupId>
-            <artifactId>trhologram</artifactId>
-            <version>unknown</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/TrHologram-2.2-all.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>unknown</groupId>
-            <artifactId>cmi</artifactId>
-            <version>unknown</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/CMI9.0.2.0.jar</systemPath>
-        </dependency>
-
     </dependencies>
 </project>
