--- a/pom.xml
+++ b/pom.xml
@@ -326,38 +326,32 @@
             <optional>true</optional>
         </dependency>
 
-        <!-- Local dependencies -->
-
         <dependency>
-            <groupId>com.Zrips</groupId>
-            <artifactId>CMI</artifactId>
-            <version>9.0.2.0</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/CMI9.0.2.0.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>com.Zrips</groupId>
-            <artifactId>MCILib</artifactId>
-            <version>1.0.3.4</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/CMILib1.0.3.4.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sainttx</groupId>
+            <groupId>com.sainttx.holograms</groupId>
             <artifactId>Holograms</artifactId>
-            <version>2.13</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/Holograms-2.13.jar</systemPath>
+            <version>2.9.1</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.Zrips.CMI</groupId>
+            <artifactId>CMI</artifactId>
+            <version>8.6.5.0</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>me.arasple.mc</groupId>
-            <artifactId>trhologram</artifactId>
-            <version>2.2-all</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/TrHologram-2.2-all.jar</systemPath>
+            <artifactId>TrHologram</artifactId>
+            <version>1.11</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.Zrips</groupId>
+            <artifactId>CMILib</artifactId>
+            <version>1.0.3.4</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
