--- a/pom.xml
+++ b/pom.xml
@@ -334,9 +334,9 @@
         </dependency>
 
         <dependency>
-            <groupId>com.Zrips.CMI</groupId>
+            <groupId>com.Zrips</groupId>
             <artifactId>CMI</artifactId>
-            <version>8.6.5.0</version>
+            <version>9.0.2.8</version>
             <scope>provided</scope>
         </dependency>
 
@@ -350,7 +350,7 @@
         <dependency>
             <groupId>com.Zrips</groupId>
             <artifactId>CMILib</artifactId>
-            <version>1.0.3.4</version>
+            <version>1.0.3.6</version>
             <scope>provided</scope>
         </dependency>
 
