--- a/main/src/resources/plugin.yml
+++ b/main/src/resources/plugin.yml
@@ -5,7 +5,7 @@ api-version: 1.13
 version: ${project.version}
 depend: []
 loadbefore: [MMOCore,MMOItems]
-softdepend: [MythicMobs]
+softdepend: [MythicMobs,WorldGuard,Residence]
 description: Kind of like mythiclib, but without the generic disorders
 commands:
   mythiclib:
