--- a/pom.xml
+++ b/pom.xml
@@ -348,6 +348,20 @@
         </dependency>
 
         <dependency>
+            <groupId>com.massivecraft</groupId>
+            <artifactId>MassiveCore</artifactId>
+            <version>2.14.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.massivecraft</groupId>
+            <artifactId>Factions</artifactId>
+            <version>1.6.9.5</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
             <groupId>com.Zrips</groupId>
             <artifactId>CMILib</artifactId>
             <version>1.0.3.6</version>
