--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,7 @@
             <artifactId>MythicMobs-Dist</artifactId>
             <version>5.0.0-SNAPSHOT</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -221,6 +222,7 @@
             <version>2.2.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -338,6 +340,7 @@
             <artifactId>CMI</artifactId>
             <version>9.0.2.8</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -345,6 +348,7 @@
             <artifactId>TrHologram</artifactId>
             <version>1.11</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -352,6 +356,7 @@
             <artifactId>MassiveCore</artifactId>
             <version>2.14.0</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -359,6 +364,7 @@
             <artifactId>Factions</artifactId>
             <version>1.6.9.5</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -366,6 +372,7 @@
             <artifactId>CMILib</artifactId>
             <version>1.0.3.6</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -373,6 +380,7 @@
             <artifactId>Residence</artifactId>
             <version>4.8.7.2</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
@@ -380,6 +388,7 @@
             <artifactId>worldguard-bukkit</artifactId>
             <version>7.0.2-SNAPSHOT</version>
             <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
 
     </dependencies>
