--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: maven:3-openjdk-16-slim
 
 variables:
-  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode"
+  MAVEN_CLI_OPTS: "-s .m2/settings.xml --batch-mode dependency:tree -X"
   MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository"
 
 before_script:
@@ -21,7 +21,7 @@ cache:
 build:
   stage: build
   script:
-    - mvn $MAVEN_CLI_OPTS clean package
+    - mvn $MAVEN_CLI_OPTS clean package install
         
 deploy:
   stage: deploy
