--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ cache:
 build:
   stage: build
   script:
-    - mvn $MAVEN_CLI_OPTS clean package install
+    - mvn $MAVEN_CLI_OPTS clean package install -U
         
 deploy:
   stage: deploy
