--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,13 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
+        
+        
+        <repository>
+            <id>FreneticLLC-public</id>
+            <name>FreneticLLC Maven Server</name>
+            <url>https://maven.freneticllc.com/</url>
+        </repository>
 
     </repositories>
 
