--- a/pom.xml
+++ b/pom.xml
@@ -159,13 +159,6 @@
             <id>placeholderapi</id>
             <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
         </repository>
-        
-        
-        <repository>
-            <id>FreneticLLC-public</id>
-            <name>FreneticLLC Maven Server</name>
-            <url>https://maven.freneticllc.com/</url>
-        </repository>
 
     </repositories>
 
@@ -223,14 +216,15 @@
             <optional>true</optional>
         </dependency>
 
+<!--
         <dependency>
             <groupId>org.mcmonkey</groupId>
             <artifactId>sentinel</artifactId>
-            <version>2.3.5-SNAPSHOT</version>
+            <version>2.3.0-SNAPSHOT</version>
             <type>jar</type>
             <scope>provided</scope>
             <optional>true</optional>
-        </dependency>
+        </dependency> -->
 
         <dependency>
             <groupId>org.projectlombok</groupId>
