--- a/pom.xml
+++ b/pom.xml
@@ -99,8 +99,8 @@
     <repositories>
 
         <repository>
-            <id>lumine-public</id>
-            <url>https://mvn.lumine.io/repository/maven/</url>
+            <id>nexus</id>
+            <url>https://mvn.lumine.io/repository/maven-public/</url>
         </repository>
         
         <repository>
@@ -180,7 +180,7 @@
         <dependency>
             <groupId>io.lumine</groupId>
             <artifactId>LumineUtils</artifactId>
-            <version>1.16.1-SNAPSHOT</version>
+            <version>1.17-SNAPSHOT</version>
             <scope>compile</scope>
             <exclusions>
                 <exclusion>
@@ -221,7 +221,7 @@
             <optional>true</optional>
         </dependency>
 
-<!--
+
         <dependency>
             <groupId>org.mcmonkey</groupId>
             <artifactId>sentinel</artifactId>
@@ -229,7 +229,7 @@
             <type>jar</type>
             <scope>provided</scope>
             <optional>true</optional>
-        </dependency> -->
+        </dependency> 
 
         <dependency>
             <groupId>org.projectlombok</groupId>
