Added HealthScale Command for those who face issues relating to certain players having too many hearts appear on their screen, even after using our initial Health Scaling system.
Players with the `mythiclib.commands.healthscale` permission can use `/healthscale 20` or any number to adjust their Health Scaling in-game.

The command can also be used through the console `healthscale MonzterSlayer 20` to adjust another Player's scaling!

--- a/main/src/resources/plugin.yml
+++ b/main/src/resources/plugin.yml
@@ -10,6 +10,9 @@ commands:
   mythiclib:
     description: Reload mythiclib
     permission: mythiclib.reload
+  healthscale:
+    description: Scales Player's health
+    permission: mythiclib.command.healthscale
   exploreattributes:
     description: Explore player attributes.
     permission: mythiclib.explore-attributes
