--- a/pom.xml
+++ b/pom.xml
@@ -368,7 +368,7 @@
         <dependency>
             <groupId>com.massivecraft</groupId>
             <artifactId>Factions</artifactId>
-            <version>1.6.9.5</version>
+            <version>1.6.9.5-2.9.8-RC</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
