--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
+                    <compilerArgument>-proc:none</compilerArgument>
                     <source>8</source>
                     <target>8</target>
                 </configuration>
