--- a/v1_18/pom.xml
+++ b/v1_18/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>MythicLib</artifactId>
         <groupId>io.lumine</groupId>
-        <version>1.2</version>
+        <version>${revision}</version>
     </parent>
 
     <build>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>io.lumine</groupId>
             <artifactId>mythiclib-plugin</artifactId>
-            <version>1.2</version>
+            <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
