added back removed configManager methods

--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -2,6 +2,7 @@
 config-version: 4
 
 # Edit general plugin number formatting here.
+# Restart your server when changing this so that MMOItems and MMOCore update as well
 number-format:
   decimal-separator: .
 
