--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -114,10 +114,8 @@
             <url>https://libraries.minecraft.net/</url>
         </repository>
         <repository>
-            <!-- it's just jitpack, no need for other crap. -->
-            <id>shopkeepers</id>
+            <id>jitpack</id>
             <url>https://jitpack.io</url>
-            <!-- <url>https://nexus.lichtspiele.org/repository/releases/</url> -->
         </repository>
         <repository>
             <id>placeholderapi</id>
@@ -321,6 +319,14 @@
             <artifactId>SpartanAPI</artifactId>
             <version>1.0</version>
             <scope>provided</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.github.promcteam</groupId>
+            <artifactId>proskillapi</artifactId>
+            <version>1.1.7.6</version>
+            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
     </dependencies>
 </project>
