--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -103,3 +103,10 @@ game-indicators:
 # Set to false when having issues with another plugin interfering
 # with the player's movement speed
 fix-movement-speed: true
+
+# Limits the amount of damage particles that can be sent to a player
+# every tick. By default it's set to 10 particles/tick. These particles
+# can be quite annoying and can even crash the client if there are too many.
+damage-particles-cap:
+  max-per-tick: 10
+  enabled: true
