--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,7 @@ gradle-app.setting
 
 # End of https://www.gitignore.io/api/java,code-java,intellij,eclipse,netbeans,gradle,git,maven,windows,linux,macos
 /.m2/
+/plugin/.flattened-pom.xml
+/v1_17/.flattened-pom.xml
+/v1_18/.flattened-pom.xml
+/.flattened-pom.xml
