Addec clean plugin to dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,16 @@
         </repository>
     </repositories>
 
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-clean-plugin -->
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+    </dependencies>
+
     <pluginRepositories>
         <pluginRepository>
             <id>apache.snapshots</id>
