--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -160,8 +160,8 @@
         </dependency>
         <dependency>
             <groupId>io.lumine</groupId>
-            <artifactId>MythicMobs-Dist</artifactId>
-            <version>5.0.0-SNAPSHOT</version>
+            <artifactId>Mythic-Dist</artifactId>
+            <version>5.0.1</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
