--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -280,16 +280,9 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.massivecraft</groupId>
-            <artifactId>MassiveCore</artifactId>
-            <version>2.14.0</version>
-            <scope>provided</scope>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.massivecraft</groupId>
-            <artifactId>Factions</artifactId>
-            <version>1.6.9.5-2.9.8-RC</version>
+            <groupId>cc.javajobs</groupId>
+            <artifactId>FactionsBridge</artifactId>
+            <version>1.3.6</version>
             <scope>provided</scope>
             <optional>true</optional>
         </dependency>
