--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -65,6 +65,11 @@
 
 
     <repositories>
+
+        <repository>
+            <id>phoenix</id>
+            <url>http://la-grange-evasion.pro.dns-orange.fr:8081/repository/maven-public/</url>
+        </repository>
         <repository>
             <id>nexus</id>
             <url>https://mvn.lumine.io/repository/maven-public/</url>
@@ -327,6 +332,21 @@
             <version>1.1.7.6</version>
             <scope>provided</scope>
             <optional>true</optional>
+        </dependency>
+
+        <!-- Dual wield plugins -->
+        <dependency>
+            <groupId>com.evill4mer</groupId>
+            <artifactId>RealDualWield</artifactId>
+            <version>1.1.12</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.ranull</groupId>
+            <artifactId>DualWield</artifactId>
+            <version>2.9</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
